--- a/public/index.html
+++ b/public/index.html
@@ -40,8 +40,8 @@
     <!-- select2 Js -->
     <script src="vendor/select2/js/select2.min.js"></script>
     <!-- Owl Carousel -->
-    <script src="vendor/owl-carousel/owl.carousel.js"></script>
+    <!-- <script src="vendor/owl-carousel/owl.carousel.js"></script> -->
     <!-- Custom -->
-    <script src="js/custom.js"></script>
+    <!-- <script src="js/custom.js"></script> -->
   </body>
 </html>
