Implement location search

--- a/reactApp/public/index.html
+++ b/reactApp/public/index.html
@@ -27,5 +27,6 @@
     <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <!-- select2 Js -->
     <script src="/vendor/select2/js/select2.min.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDpCHIvLJ7SFW8wXTjShluXxRWfEkmGECA&libraries=places"></script>
   </body>
 </html>
