Handle update profile

--- a/reactApp/public/index.html
+++ b/reactApp/public/index.html
@@ -14,7 +14,7 @@
       <link href="/vendor/select2/css/select2-bootstrap.css" />
       <link href="/vendor/select2/css/select2.min.css" rel="stylesheet" />
       <!-- Custom styles for this template -->
-      <link href="/css/osahan.css" rel="stylesheet">
+      <link href="/css/dichonao.css" rel="stylesheet">
       <!-- Owl Carousel -->
       <link rel="stylesheet" href="/vendor/owl-carousel/owl.carousel.css">
       <link rel="stylesheet" href="/vendor/owl-carousel/owl.theme.css">
