--- a/reactApp/public/index.html
+++ b/reactApp/public/index.html
@@ -27,5 +27,7 @@
     <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <!-- select2 Js -->
     <script src="/vendor/select2/js/select2.min.js"></script>
+    <script src="/vendor/owl-carousel/owl.carousel.js" id="vendor_carousel" type="text/javascript"></script>
+    <script src="/js/custom.js" id="custom" type="text/javascript"></script>
   </body>
 </html>
