--- a/reactApp/public/index.html
+++ b/reactApp/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-      <title>Đi chợ nào ...</title>
+      <title>Đi Chợ Nào</title>
       <!-- Favicon Icon -->
       <link rel="icon" type="image/png" href="/img/favicon.png">
       <!-- Bootstrap core CSS -->
